--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Sometffhing else here</a>
                 </div>
             </li>
             <li class="nav-item">
