--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Anothffer action</a>
+                    <a class="dropdown-item" href="#">Anothffer faction</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Something else fhere</a>
                 </div>
             </li>
             <li class="nav-item">
