Sign up is ready, Gleb

--- a/sign_up.html
+++ b/sign_up.html
@@ -57,9 +57,10 @@
     </form>
     </div>
 </nav>
-
 <div class="container-fliud sign_in_central_container">
-
+    <div class="sign">
+        <span class="sign__word">Регистрация</span>
+    </div>
     <div class="row justify-content-center">
 
         <div class="col-lg-4 sign_in_field">
