ready structure, not ready styles

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans|Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
-    <title> diploma </title>
+    <title> Home Page </title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg  "  >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,38 +25,24 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
-            </li>r
-            <li class="nav-item">
-                <a class="nav-link" href="#">Распознать продукты</a>
             </li>
-<!--            <li class="nav-item dropdown">-->
-<!--                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                    Рецепты-->
-<!--                </a>-->
+            <li class="nav-item">
+                <a class="nav-link" href="recognize_products.html">Распознать продукты</a>
+            </li>
+
 
             <li class="nav-item">
                 <a class="nav-link" href="#">Контакты</a>
             </li>
 
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-<<<<<<< HEAD
-                    <a class="dropdown-item" href="#">Another faction</a>
-=======
-                    <a class="dropdown-item" href="#">Anothffer faction</a>
->>>>>>> 2f06d12fa3e539883265c0ba5c6f046c279c325d
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else there</a>
-                </div>
+
             </li>
-            <li class="nav-item">
-<!--                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-            </li>
+
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="sign_in.html" target="_blank">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Вход</button>   </form>
-        <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Регистрация</button>
+        <form class="form-inline my-2 my-lg-0" action="sign_in.html" >
+                <button class="btn btn-outline-warning my-2 my-sm-0 " type="submit"  > Вход</button>   </form>
+        <form class="form-inline my-2 my-lg-0 " action="sign_up.html">
+            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" >Регистрация</button>
         </form>
     </div>
 </nav>
@@ -142,6 +128,8 @@
         </div>
     </nav>
 </footer>
+
+
 
 
 
