--- a/sign_up.html
+++ b/sign_up.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans|Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
-    <title>Sign in</title>
+    <title>Sign up</title>
 
 </head>
 <body>
@@ -69,8 +69,8 @@
             <form action="">
                 <i class="fas fa-user"></i> <input type="text" placeholder=" Ім'я користувача" >
                 <i class="fas fa-envelope"></i> <input  type="text" placeholder="Електронна пошта " >
-                <i class="fas fa-flag"></i> <input  type="text" placeholder="Місто " >
                 <i class="fas fa-lock"></i> <input  type="text" placeholder="Пароль " >
+                <i class="fas fa-lock"></i> <input  type="text" placeholder="Повторити Пароль " >
                 <button> Зареєструватись</button>
 
         </div>
