Correct some style

--- a/delivery.html
+++ b/delivery.html
@@ -23,14 +23,11 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg"  >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="button">Відсутній акаунт?</button>
-    </form>
-    </div>
 </nav>
 
 <div class="container-fluid text-center">
@@ -59,7 +56,6 @@
                     <th scope="col">#</th>
                     <th scope="col">Продукт</th>
                     <th scope="col">Количество</th>
-
                 </tr>
                 </thead>
                 <tbody>
@@ -67,19 +63,16 @@
                     <th scope="row">1</th>
                     <td> </td>
                     <td> </td>
-
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td> </td>
                     <td> </td>
-
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td> </td>
                     <td> </td>
-
                 </tr>
                 </tbody>
             </table>
@@ -88,29 +81,19 @@
         <div class="col-lg-8 offset-2" >
 
             <h4> Приблизительная стоимость <input class="cost" type="text"> +40 грн доставка </h4>
-
-
         </div>
 
         <div class="col-lg-8 offset-2" >
-
             <h4> Имя <input class="cost" type="text"> </h4>
-
-
         </div>
-
         <div class="col-lg-8 offset-2" >
 
             <h4> Магазин <input class="cost" type="text">  </h4>
-
-
         </div>
 
         <div class="col-lg-8 offset-2" >
 
             <h4> Номер телефона <input class="cost" type="text"> </h4>
-
-
         </div>
 
         <div class="col-lg-8 offset-2" >
@@ -123,44 +106,29 @@
         <div class="col-lg-8 offset-2" >
 
             <h4> Дом <input class="cost" type="text"> Кв <input type="text"> Этаж <input type="text">    </h4>
-
-
         </div>
-
         <div class="col-lg-3 offset-4">
 
             <button> Заказать</button>
 
         </div>
-
-
-
-
     </div>
 
     <div class="row">
-
         <div class="col-lg-8 offset-2">
-
             <p> *После отправки заказа он будет обработан в течении 5-20 минут и менеджер свяжится с вами по телефону
                 <br> *Стоимость заказа указана приблизительная. Основана на средней цене продукта. При доставке продуктов вам будет предоставляться чек для оплаты </p>
         </div>
-
     </div>
-
-
-
 </div>
 
 
-
 <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
                 <li class="nav-item active">
