--- a/recognize_products.html
+++ b/recognize_products.html
@@ -20,14 +20,11 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg" >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="button">Відсутній акаунт?</button>
-    </form>
-    </div>
 </nav>
 
 <div class="container-fluid recognize_central_container text-center"  >
@@ -60,7 +57,6 @@
                 <th scope="col">#</th>
                 <th scope="col">Продукт</th>
                 <th scope="col">Количество</th>
-
             </tr>
             </thead>
             <tbody>
@@ -68,13 +64,11 @@
                 <th scope="row">1</th>
                 <td> </td>
                 <td> </td>
-
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td> </td>
                 <td> </td>
-
             </tr>
             <tr>
                 <th scope="row">3</th>
@@ -85,25 +79,15 @@
             </tbody>
         </table>
 </div>
-
         <div class="col-lg-2 offset-8">
-
-            <form action=""> <button type="submit"> Распечатать </button> <button type="submit"> Заказать доставку </button> </form>
-
-
+            <form action=""> <button type="submit"> Распечатать </button> </form>
+                <form action="delivery.html"><button type="submit"> Заказать доставку </button> </form>
         </div>
-
     </div>
-
 </div>
 
-
-
-
-
-
 <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+    <nav class="navbar navbar-expand-lg" >
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
