--- a/index_forAuth.html
+++ b/index_forAuth.html
@@ -29,15 +29,16 @@
                 <a class="nav-link" href="recognize_products.html">Распознать продукты</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="orders.html">Мои заказы</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Контакты</a>
             </li>
+
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="sign_in.html" >
-                <button class="btn btn-outline-warning my-2 my-sm-0 " type="submit"  > Вход</button>   </form>
-        <form class="form-inline my-2 my-lg-0 " action="sign_up.html">
-            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" >Регистрация</button>
-        </form>
+        <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-warning my-2 my-sm-0 " type="submit"  > Выход</button>   </form>
     </div>
 </nav>
 
@@ -79,7 +80,7 @@
             <a> <img class="img-fluid" src="images/about_us_1.jpg" alt=""> </a>
             <div class="border_2">  </div>
             <p> Наша система позволяет вам <br> распозновать продукты любого блюда, <br> который пришелся вам по душе.
-                 </p>
+            </p>
         </div>
 
         <div class="col-lg-4 about_us">
@@ -119,10 +120,10 @@
                 </li>
             </div>
         </div>
-        <img class="img_local_ua" src="images/ua.jpg">
-        <img class="img_local_en" src="images/en.jpg">
     </nav>
 </footer>
+
+
 
 
 
