--- a/orders.html
+++ b/orders.html
@@ -22,14 +22,11 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg"  >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="button">Відсутній акаунт?</button>
-    </form>
-    </div>
 </nav>
 
 <div class="container-fluid orders_central_container text-center">
@@ -57,7 +54,6 @@
                     <th scope="row">2</th>
                     <td> </td>
                     <td> </td>
-
                 </tr>
                 <tr>
                     <th scope="row">3</th>
@@ -68,15 +64,12 @@
                 </tbody>
             </table>
         </div>
-
     </div>
-
-
 
 </div>
 
 <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
