--- a/sign_in.html
+++ b/sign_in.html
@@ -12,46 +12,42 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fondamento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=El+Messiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Sign in</title>
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg" >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="button">Відсутній акаунт?</button>
+    <form action="sign_up.html">
+            <button class="btn btn-outline-warning my-2 my-sm-0" type="button">Відсутній акаунт?</button>
         </form>
     </div>
 </nav>
+
 <div class="sign">
     <span class="sign__word">Авторизация</span>
 </div>
+
 <div class="container-fliud sign_in_central_container">
-
 <div class="row justify-content-center">
-
-    <div class="col-lg-3 sign_in_field">
-
+    <div class="col-lg-4 sign_in_field">
         <form action=""> <i class="fas fa-user"></i> <input type="text" placeholder=" Ім'я користувача" >
             <i class="fas fa-lock"></i> <input  type="text" placeholder="Пароль " >
             <button class = "button_sign_in"type="submit"> Увійти</button>
         </form>
 
     </div>
-
 </div>
-
 </div>
-
 
 <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+    <nav class="navbar navbar-expand-lg" >
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
