--- a/sign_up.html
+++ b/sign_up.html
@@ -10,13 +10,14 @@
     <script src="https://kit.fontawesome.com/73ac22b5e9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans|Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
     <title>Sign up</title>
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+<nav class="navbar navbar-expand-lg "  >
     <a class="navbar-brand" href="index.html"><img class="img-fluid img_logo" src="images/logo1.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,8 +53,8 @@
     <!--        </ul>-->
     <!--        <form class="form-inline my-2 my-lg-0">-->
     <!--            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Вход</button>-->
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Вже маєте акаунт?</button>
-
+    <form action="sign_in.html">
+    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Вже маєте акаунт?</button>
     </form>
     </div>
 </nav>
@@ -72,9 +73,8 @@
                 <i class="fas fa-lock"></i> <input  type="text" placeholder="Пароль " >
                 <i class="fas fa-lock"></i> <input  type="text" placeholder="Повторити Пароль " >
                 <button> Зареєструватись</button>
-
+            </form>
         </div>
-
     </div>
 
 </div>
@@ -82,7 +82,7 @@
 
 <footer>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark "  >
+    <nav class="navbar navbar-expand-lg" >
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
