--- a/recognize_products.html
+++ b/recognize_products.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=El+Messiri&display=swap" rel="stylesheet">
-    <title>Recognize products</title>
+    <title>Recognize productssss</title>
 
 </head>
 <body>
