--- a/sign_in.html
+++ b/sign_in.html
@@ -24,8 +24,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <form action="sign_up.html">
-            <button class="btn btn-outline-warning my-2 my-sm-0" type="button">Відсутній акаунт?</button>
+    <form action="sign_up.html" >
+            <button class="btn btn-outline-warning my-2 my-sm-0"   >  Відсутній акаунт?</button>
         </form>
     </div>
 </nav>
