--- a/delivery.html
+++ b/delivery.html
@@ -30,13 +30,13 @@
     </button>
 </nav>
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-center delivery_central_container">
 
     <h3> Ваш заказ </h3>
 
     <div class="row">
 
-        <div class="col-lg-3 offset-1">
+        <div class="col-lg-3 offset-2">
 
             <h4> Уточните количество нужных ингридиентов </h4>
 
@@ -50,63 +50,106 @@
         </div>
 
         <div class="col-lg-8 offset-2">
-            <table class="table table-dark">
+            <table class="table table-light">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Продукт</th>
-                    <th scope="col">Количество</th>
+                    <th scope="col">Огурцы</th>
+                    <th scope="col">2 кг</th>
+
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td> </td>
-                    <td> </td>
+                    <th scope="row">Яйца</th>
+                    <td> 6 шт</td>
+
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row"></th>
                     <td> </td>
-                    <td> </td>
+
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row"></th>
                     <td> </td>
-                    <td> </td>
+
                 </tr>
                 </tbody>
             </table>
         </div>
 
-        <div class="col-lg-8 offset-2" >
 
-            <h4> Приблизительная стоимость <input class="cost" type="text"> +40 грн доставка </h4>
-        </div>
 
-        <div class="col-lg-8 offset-2" >
-            <h4> Имя <input class="cost" type="text"> </h4>
-        </div>
-        <div class="col-lg-8 offset-2" >
+            <div class="col-lg-12 ">
 
-            <h4> Магазин <input class="cost" type="text">  </h4>
-        </div>
+                <p> Приблизительная стоимость </p>
+                <input type="text">
+                <p>+ 40 грн доставка </p>
 
-        <div class="col-lg-8 offset-2" >
-
-            <h4> Номер телефона <input class="cost" type="text"> </h4>
-        </div>
-
-        <div class="col-lg-8 offset-2" >
-
-            <h4> Улица <input class="cost" type="text">  </h4>
 
 
         </div>
 
-        <div class="col-lg-8 offset-2" >
+        <div class="col-lg-12 ">
 
-            <h4> Дом <input class="cost" type="text"> Кв <input type="text"> Этаж <input type="text">    </h4>
+            <p class="name_sign"> Имя </p>
+            <input class="name_input" type="text">
+
+
+
+
         </div>
+
+        <div class="col-lg-12 ">
+
+            <p class="shop_sign"> Магазин </p>
+            <input class="shop_input" type="text">
+
+
+
+
+        </div>
+
+        <div class="col-lg-12 ">
+
+            <p class="number_sign"> Номер телефона </p>
+            <input class="number_input" type="text">
+
+
+
+
+        </div>
+
+        <div class="col-lg-12 ">
+
+            <p class="home_sign"> Дом </p>
+            <input class="home_input" type="text">
+
+
+
+
+        </div>
+
+        <div class="col-lg-12 ">
+
+            <p class="appartament_sign"> Кв </p>
+            <input class="appartament_input" type="text">
+
+
+
+
+        </div>
+
+        <div class="col-lg-12 ">
+
+            <p class="flour_sign"> Этаж </p>
+            <input class="flour_input" type="text">
+
+
+
+
+        </div>
+
         <div class="col-lg-3 offset-4">
 
             <button> Заказать</button>
