--- a/recognize_products.html
+++ b/recognize_products.html
@@ -28,10 +28,10 @@
 </nav>
 
 <div class="container-fluid recognize_central_container text-center"  >
-<h3> Мы поможем вам получить список любого рецепта за пару секунд </h3>
+<h3> Мы поможем вам получить список  любого рецепта за пару секунд </h3>
     <div class="row">
 
-        <div class="col-lg-6" >
+        <div class="col-lg-6 offset-2" >
 
             <form action="">
                 <input type="text" placeholder="Вставьте ссылку" >
@@ -41,7 +41,7 @@
 
         <div class="col-lg-2">
 
-            <form action=""> <button type="submit"> > </button> </form>
+            <form action=""> <button class="enter_action" type="submit"> > </button> </form>
         </div>
 
         <div class="col-lg-2 offset-8">
@@ -51,37 +51,37 @@
             <i class="fas fa-trash-alt"></i>
         </div>
 <div class="col-lg-8 offset-2">
-        <table class="table table-dark">
+        <table class="table table-light main_table">
             <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Продукт</th>
-                <th scope="col">Количество</th>
+                <th scope="col"> s</th>
+                <th scope="col"> s</th>
+                <th scope="col">s </th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <th scope="row">1</th>
-                <td> </td>
-                <td> </td>
+                <th scope="row"> s</th>
+                <td> s</td>
+                <td>s </td>
             </tr>
             <tr>
-                <th scope="row">2</th>
-                <td> </td>
-                <td> </td>
+                <th scope="row"> s</th>
+                <td>s </td>
+                <td>s </td>
             </tr>
             <tr>
-                <th scope="row">3</th>
-                <td> </td>
-                <td> </td>
+                <th scope="row"> s</th>
+                <td>s </td>
+                <td>s </td>
 
             </tr>
             </tbody>
         </table>
 </div>
-        <div class="col-lg-2 offset-8">
-            <form action=""> <button type="submit"> Распечатать </button> </form>
-                <form action="delivery.html"><button type="submit"> Заказать доставку </button> </form>
+        <div class="col-lg-4 offset-4 under_table " >
+            <form action=""> <button type="submit"> Распечатать </button> <button type="submit" > Заказать доставку </button> </form>
+
         </div>
     </div>
 </div>
@@ -105,6 +105,8 @@
         </div>
     </nav>
 </footer>
+
+
 
 </body>
 </html>
