almost ready delivery

--- a/delivery.html
+++ b/delivery.html
@@ -44,13 +44,13 @@
 
         <div class="col-lg-3 offset-2">
 
-            <i class="fas fa-plus"></i>
-            <i class="fas fa-edit"></i>
-            <i class="fas fa-trash-alt"></i>
+            <i class="fas fa-plus fa-2x"></i>
+            <i class="fas fa-edit fa-2x "></i>
+            <i class="fas fa-trash-alt fa-2x  "></i>
         </div>
 
         <div class="col-lg-8 offset-2">
-            <table class="table table-light">
+            <table  class="table-dark table-bordered table table-hover ">
                 <thead>
                 <tr>
                     <th scope="col">Огурцы</th>
@@ -78,96 +78,122 @@
             </table>
         </div>
 
+<div class="col-lg-2 offset-3 delivery_signs"> <p class="approximate_price_sign"> Приблизительная стоимость</p>
+<p class="name_sign">Имя</p>
+<p class="shop_sign">Магазин</p>
+<p class="number_sign"> Номер телефона</p>
+<p class="street_sign"> Улица</p>
+<p class="house_sign">Дом </p>
+    <p class="apartment_sign">Квартира </p>
+    <p class="floor_sign"> Этаж </p>
+</div>
+        
+        <div class="col-lg-2 delivery_inputs" >
+            <input type="text"> <input class="approximate_cost_input" type="text">
+            <select name="shop">
 
+                <option value="r1">?</option>
+                <option value="r2">?</option>
+                <option value="r3">?</option>
 
-            <div class="col-lg-12 ">
-
-                <p> Приблизительная стоимость </p>
-                <input type="text">
-                <p>+ 40 грн доставка </p>
-
-
-
-        </div>
-
-        <div class="col-lg-12 ">
-
-            <p class="name_sign"> Имя </p>
-            <input class="name_input" type="text">
-
-
-
-
-        </div>
-
-        <div class="col-lg-12 ">
-
-            <p class="shop_sign"> Магазин </p>
-            <input class="shop_input" type="text">
-
-
-
+            </select>
+            <input type="text"  >
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
 
         </div>
 
-        <div class="col-lg-12 ">
-
-            <p class="number_sign"> Номер телефона </p>
-            <input class="number_input" type="text">
-
-
-
-
+        <div class="col-lg-2 third_column">
+            <p style="margin-top: 13px;"> + 40 грн доставка</p>
         </div>
 
-        <div class="col-lg-12 ">
-
-            <p class="home_sign"> Дом </p>
-            <input class="home_input" type="text">
 
 
+<!--            <div class="col-lg-12 ">-->
 
-
-        </div>
-
-        <div class="col-lg-12 ">
-
-            <p class="appartament_sign"> Кв </p>
-            <input class="appartament_input" type="text">
+<!--                <p class="approximate_cost_sign"> Приблизительная стоимость </p>-->
+<!--                <input class="approximate_cost_input" type="text">-->
+<!--                <p class="cost_delivery_sign">+ 40 грн доставка </p>-->
 
 
 
+<!--        </div>-->
 
-        </div>
+<!--        <div class="col-lg-2 offset-3  ">-->
 
-        <div class="col-lg-12 ">
-
-            <p class="flour_sign"> Этаж </p>
-            <input class="flour_input" type="text">
-
-
+<!--            <p class="name_sign"> Имя </p>   </div>-->
+<!--        <div class="col-lg-1 offset-1">-->
+<!--            <input class="name_input" type="text">-->
 
 
-        </div>
+<!--        </div>-->
 
-        <div class="col-lg-3 offset-4">
+<!--        <div class="col-lg-2 offset-3  "> <p class="shop_sign"> Магазин </p>-->
+<!--        </div>-->
+<!--        <div class="col-lg-1 offset-1">  <input class="name_input" type="text"> </div>-->
 
-            <button> Заказать</button>
 
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-lg-8 offset-2">
+<!--        <div class="col-lg-12 ">-->
+
+<!--            <p class="number_sign"> Номер телефона </p>-->
+<!--            <input class="number_input" type="text">-->
+
+
+
+
+<!--        </div>-->
+
+<!--        <div class="col-lg-12 ">-->
+
+<!--            <p class="home_sign"> Дом </p>-->
+<!--            <input class="home_input" type="text">-->
+
+
+
+
+<!--        </div>-->
+
+<!--        <div class="col-lg-12 ">-->
+
+<!--            <p class="appartament_sign"> Кв </p>-->
+<!--            <input class="appartament_input" type="text">-->
+
+
+
+
+<!--        </div>-->
+
+<!--        <div class="col-lg-12 ">-->
+
+<!--            <p class="flour_sign"> Этаж </p>-->
+<!--            <input class="flour_input" type="text">-->
+
+
+
+
+<!--        </div>-->
+
+<!--        <div class="col-lg-3 offset-4">-->
+
+<!--            <button> Заказать</button>-->
+
+<!--        </div>-->
+<!--    </div>-->
+
+
+        <div class="col-lg-12  bottom_sign">
             <p> *После отправки заказа он будет обработан в течении 5-20 минут и менеджер свяжится с вами по телефону
                 <br> *Стоимость заказа указана приблизительная. Основана на средней цене продукта. При доставке продуктов вам будет предоставляться чек для оплаты </p>
         </div>
-    </div>
+
 </div>
 
 
 <footer>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
