--- a/delivery.html
+++ b/delivery.html
@@ -192,23 +192,24 @@
 </div>
 
 
-<footer>
-    <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <p class = 'author'>Recipeme-2020 </p>
-                </li>
-                <li class="nav-item">
-                    <p class = 'authors'> Developing by Bekir E., Zadoroznyy G., Sakovych C.</p>
-                </li>
+    <footer>
+        <nav class="navbar navbar-expand-lg container-fluid">
+            <a class="navbar-brand"><img class="img-fluid" src="images/logo1.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <p class = 'author'>Recipeme-2020 </p>
+                    </li>
+                    <li class="nav-item">
+                        <p class = 'authors'> Developing by Bekir E., Zadoroznyy G., Sakovych C.</p>
+                    </li>
+                </div>
             </div>
-        </div>
-    </nav>
-</footer>
+        </nav>
+    </footer>
 </body>
 </html>
