--- a/orders.html
+++ b/orders.html
@@ -37,28 +37,37 @@
             <table class="table table-dark">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Продукт</th>
-                    <th scope="col">Количество</th>
+                    <th scope="col">Номер</th>
+                    <th scope="col">Дата</th>
+                    <th scope="col">Получатель</th>
+                    <th scope="col">Цена</th>
+                    <th scope="col">Статус</th>
 
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td> </td>
-                    <td> </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
 
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td> </td>
-                    <td> </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td> </td>
-                    <td> </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
+                    <td>? </td>
+
 
                 </tr>
                 </tbody>
