--- a/delivery.html
+++ b/delivery.html
@@ -28,6 +28,26 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="recognize_products.html">Распознать продукты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Контакты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Доставка</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Заказы</a>
+            </li>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <div class="container-fluid text-center delivery_central_container">
@@ -44,9 +64,9 @@
 
         <div class="col-lg-3 offset-2">
 
-            <i class="fas fa-plus fa-2x"></i>
-            <i class="fas fa-edit fa-2x "></i>
-            <i class="fas fa-trash-alt fa-2x  "></i>
+            <button type="submit" id="add"> <i class="fas fa-plus fa-2x"></i></button>
+            <button type="submit" id="create_note"> <i class="fas fa-edit fa-2x "></i></button>
+            <button type="submit" id="delete">   <i class="fas fa-trash-alt fa-2x  "></i> </button>
         </div>
 
         <div class="col-lg-8 offset-2">
@@ -89,6 +109,7 @@
 </div>
         
         <div class="col-lg-2 delivery_inputs" >
+            <form action="">
             <input type="text"> <input class="approximate_cost_input" type="text">
             <select name="shop">
 
@@ -97,13 +118,16 @@
                 <option value="r3">?</option>
 
             </select>
-            <input type="text"  >
+             <input type="text"  >
             <input type="text">
             <input type="text">
             <input type="text">
             <input type="text">
+                </form>
 
         </div>
+
+
 
         <div class="col-lg-2 third_column">
             <p style="margin-top: 13px;"> + 40 грн доставка</p>
