--- a/orders.html
+++ b/orders.html
@@ -27,6 +27,26 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="recognize_products.html">Распознать продукты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Контакты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Доставка</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Заказы</a>
+            </li>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <div class="container-fluid orders_central_container text-center">
@@ -34,7 +54,7 @@
     <div class="row">
 
         <div class="col-lg-8 offset-2">
-            <table class="table table-dark">
+            <table class="table table-dark table-hover">
                 <thead>
                 <tr>
                     <th scope="col">Номер</th>
