--- a/recognize_products.html
+++ b/recognize_products.html
@@ -25,6 +25,26 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="recognize_products.html">Распознать продукты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Контакты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Доставка</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Заказы</a>
+            </li>
+            </li>
+        </ul>
+        </div>
 </nav>
 
 
@@ -46,14 +66,14 @@
             <form action=""> <button class="enter_action" type="submit"> > </button> </form>
         </div>
 
-        <div class="col-lg-2 offset-8">
+        <div class="col-lg-2 offset-8 functional_buttons">
 
-            <i class="fas fa-plus"></i>
-            <i class="fas fa-edit"></i>
-            <i class="fas fa-trash-alt"></i>
+            <button><i class="fas fa-plus fa-2x"></i> </button>f
+            <button> <i class="fas fa-edit fa-2x"></i></button>
+            <button>   <i class="fas fa-trash-alt fa-2x"></i></button>
         </div>
 <div class="col-lg-8 offset-2">
-        <table class="table table-light main_table">
+        <table class="table table-dark main_table">
             <thead>
             <tr>
                 <th scope="col"> s</th>
